eks/application/anton/highload-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: load-test-highload
  namespace: app
  labels:
    app: load-test
    load: high
spec:
  replicas: 2
  selector:
    matchLabels:
      app: load-test
      load: high
  template:
    metadata:
      labels:
        app: load-test
        load: high
    spec:
      nodeSelector: {
        role: worker
      }
      containers:
      - name: load-test
        image: 301129966109.dkr.ecr.us-east-2.amazonaws.com/javaexample
        imagePullPolicy: Always
        ports:
        - name: m-http
          containerPort: 3000
        resources: 
          requests: 
            cpu: 150m
            memory: 340Mi
          limits:
            cpu: 170m
            memory: 400Mi
