eks/application/anton/highload-ingress-template.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
    # change the IP address here
  - host: <<ELB_HOSTNAME>>
    http:
      paths:
      - backend:
          service:
            name: load-test-service-highload
            port: 
              number: 80
        path: /app(/|$)(highcpu1)
        pathType: Prefix
      - backend:
          service:
            name: load-test-service
            port: 
              number: 80
        path: /app(/|$)(.*)
        pathType: Prefix
