eks/application/anton/highload-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: webapp-ingress
  namespace: app
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    # nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    # change the IP address here
  - host: a5728c3df5e8a438791d3187cc5e8f65-1994633686.us-east-2.elb.amazonaws.com
    http:
      paths:
      - backend:
          service:
            name: load-test-service-highload
            port: 
              number: 80
        path: /highcpu
        pathType: Prefix
      - backend:
          service:
            name: load-test-service
            port: 
              number: 80
        path: /
        pathType: Prefix
